--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.0.0",
   "description": "Transparent change-tracking using Harmony Proxies.",
   "main": "lib/index.js",
-  "dependencies": {
+  "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-cli": "rubenv/grunt-mocha-cli#mocha-options"
-  },
-  "devDependencies": {
-    "coffee-script": "~1.6.3",
-    "grunt-cli": "~0.1.11"
+    "grunt-mocha-cli": "rubenv/grunt-mocha-cli#mocha-options",
+    "coffee-script": "~1.6.3"
   },
   "scripts": {
     "test": "grunt test"
   },
-  "author": "",
-  "license": "MIT"
+  "author": {
+    "name": "Ruben Vermeersch",
+    "email": "ruben@rocketeer.be",
+    "url": "http://rocketeer.be/"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rubenv/trackchange.git"
+  }
 }
