--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-mocha-cli": "rubenv/grunt-mocha-cli#mocha-options",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "grunt-release": "~0.6.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "prepublish": "grunt build"
   },
   "author": {
     "name": "Ruben Vermeersch",
