--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-cli": "rubenv/grunt-mocha-cli#mocha-options",
+    "grunt-mocha-cli": "~1.5.0",
     "coffee-script": "~1.6.3",
     "grunt-release": "~0.6.0"
   },
