--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Transparent change-tracking using Harmony Proxies.",
   "main": "lib/index.js",
   "devDependencies": {
+    "coffee-script": "~1.6.3",
     "grunt": "~0.4.2",
+    "grunt-bump": "0.0.13",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-mocha-cli": "~1.5.0",
-    "coffee-script": "~1.6.3",
-    "grunt-release": "~0.6.0"
+    "grunt-mocha-cli": "~1.5.0"
   },
   "scripts": {
     "test": "grunt test",
